--- a/static/style.css
+++ b/static/style.css
@@ -27,6 +27,14 @@ h2 {
   margin-bottom: 15px;
 }
 
+h3 {
+  font-size: 15px;
+  color: #fff;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 15px;
+}
+
 table {
   width: 100%;
   table-layout: auto;
