--- a/templates/page.html
+++ b/templates/page.html
@@ -12,6 +12,7 @@
 	<section>
 		<h1>Tom Crean Boardroom </h1>
 		<h2>{{date}}</h2>
+		<h3>(Last updated {{update_time}})</h3>
 		<div class="tbl-header">
 			<table cellpadding="0" cellspacing="0" border="0">
 				<thead>
@@ -23,7 +24,7 @@
 			</table>
 		</div>
 		<div class="tbl-content">
-			{{name|safe}}
+			{{table|safe}}
 		</div>
 	</section>
 
