--- a/static/style.css
+++ b/static/style.css
@@ -7,28 +7,28 @@ body {
 }
 
 section {
-  margin: 50px;
+  margin: 20px;
 }
 
 h1 {
-  font-size: 30px;
+  font-size: 22px;
   color: #fff;
   text-transform: uppercase;
   font-weight: 300;
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 0;
 }
 
 h2 {
-  font-size: 25px;
+  font-size: 16px;
   color: #fff;
   font-weight: 300;
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 0;
 }
 
 h3 {
-  font-size: 15px;
+  font-size: 12px;
   color: #fff;
   font-weight: 300;
   text-align: center;
@@ -90,11 +90,11 @@ th {
 }
 
 .made-with-love {
-  margin-top: 40px;
-  padding: 10px;
+  margin-top: 0px;
+  padding: 5px;
   clear: left;
   text-align: center;
-  font-size: 12px;
+  font-size: 10px;
   font-family: arial;
   color: #fff;
 }
