Add Owen credit

--- a/templates/page.html
+++ b/templates/page.html
@@ -29,9 +29,7 @@
 	</section>
 
 	<div class="made-with-love">
-		Made with
-		<i>☕</i> by
-		<a target="_blank" href="//imar.ie">IMaR</a>
+		®© Owen Ferris
 	</div>
 </body>
 
